--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/othiym23/music-packer",
   "dependencies": {
     "babel": "^4.0.2",
-    "once": "^1.3.1",
+    "es6-promisify": "^1.1.1",
     "uniq": "^1.0.1"
   }
 }
