--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,8 @@
   },
   "ecmaFeatures": {
     "arrowFunctions": true,
+    "destructuring": true,
+    "forOf": true,
     "blockBindings": true,
     "objectLiteralShorthandProperties": true
   },
