--- a/package.json
+++ b/package.json
@@ -27,16 +27,19 @@
   },
   "homepage": "https://github.com/othiym23/music-packer",
   "dependencies": {
-    "babel": "^4.0.2",
+    "babel": "^4.6.1",
     "es6-promisify": "^1.1.1",
-    "es6-shim": "^0.25.2",
-    "yargs": "^3.2.1"
+    "es6-shim": "^0.26.1",
+    "ini": "^1.3.3",
+    "rc": "^0.6.0",
+    "untildify": "^2.0.0",
+    "yargs": "^3.4.4"
   },
   "devDependencies": {
     "mkdirp": "^0.5.0",
     "nixt": "^0.4.1",
     "rimraf": "^2.2.8",
-    "tap": "^0.6.0"
+    "tap": "^0.7.1"
   },
   "license": "MIT"
 }
