--- a/package.json
+++ b/package.json
@@ -27,11 +27,17 @@
   },
   "homepage": "https://github.com/othiym23/music-packer",
   "dependencies": {
-    "babel": "^4.6.1",
+    "babel": "^4.6.3",
+    "decompress-zip": "^0.1.0",
     "es6-promisify": "^1.1.1",
     "es6-shim": "^0.26.1",
+    "flac-parser": "^0.3.1",
+    "glob": "^4.4.1",
     "ini": "^1.3.3",
+    "mkdirp": "^0.5.0",
+    "npmlog": "^1.2.0",
     "rc": "^0.6.0",
+    "rimraf": "^2.2.8",
     "untildify": "^2.0.0",
     "yargs": "^3.4.4"
   },
