standardize track number formatting

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "npmlog": "^1.2.0",
     "rc": "^0.6.0",
     "rimraf": "^2.2.8",
+    "sprintf": "^0.1.5",
     "untildify": "^2.0.0",
     "yargs": "^3.4.4",
     "yauzl": "^2.2.1"
