--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "packard",
-  "version": "2.0.0-2",
+  "version": "2.0.0",
   "author": "Forrest L Norvell <ogd@aoaioxxysz.net>",
   "description": "many music files onto few devices",
   "main": "lib/packer.js",
