--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/othiym23/packard",
   "dependencies": {
     "babel": "^4.6.3",
-    "es6-promisify": "^1.1.1",
+    "bluebird": "^2.9.13",
     "es6-shim": "^0.26.1",
     "flac-parser": "^0.3.1",
     "glob": "^4.4.1",
