standard ignores autogenerated files
should also ignore models until support for class syntax lands in eslint
/ standard.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "prepublish": "npm run transpile",
     "test": "npm run transpile && tap test/*.js"
   },
+  "standard": {
+    "ignore": [
+      "lib/**"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/othiym23/packard"
