--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "glob": "^4.4.1",
     "ini": "^1.3.3",
     "mkdirp": "^0.5.0",
+    "moment": "^2.9.0",
     "mv": "^2.0.3",
     "npmlog": "^1.2.0",
     "rc": "^0.6.0",
