--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
   "dependencies": {
     "babel": "^4.6.3",
     "bluebird": "^2.9.13",
-    "es6-shim": "^0.26.1",
+    "es6-shim": "^0.27.1",
     "flac-parser": "^0.3.1",
-    "glob": "^4.4.1",
+    "glob": "^5.0.1",
     "ini": "^1.3.3",
     "mkdirp": "^0.5.0",
     "moment": "^2.9.0",
     "mv": "^2.0.3",
     "npmlog": "^1.2.0",
     "rc": "^0.6.0",
-    "rimraf": "^2.2.8",
+    "rimraf": "~2.2.8",
     "sprintf": "^0.1.5",
     "untildify": "^2.0.0",
     "yargs": "^3.4.4",
