--- a/package.json
+++ b/package.json
@@ -33,21 +33,21 @@
   },
   "homepage": "https://github.com/othiym23/packard",
   "dependencies": {
-    "babel": "^4.6.3",
-    "bluebird": "^2.9.13",
+    "babel": "^4.7.12",
+    "bluebird": "^2.9.14",
     "es6-shim": "^0.27.1",
     "flac-parser": "^0.3.1",
-    "glob": "^5.0.1",
+    "glob": "^5.0.3",
     "ini": "^1.3.3",
     "mkdirp": "^0.5.0",
     "moment": "^2.9.0",
     "mv": "^2.0.3",
     "npmlog": "^1.2.0",
     "rc": "^0.6.0",
-    "rimraf": "~2.2.8",
+    "rimraf": "^2.3.2",
     "sprintf": "^0.1.5",
     "untildify": "^2.0.0",
-    "yargs": "^3.4.4",
+    "yargs": "^3.5.4",
     "yauzl": "^2.2.1"
   },
   "devDependencies": {
