test: add coveralls reporting

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "transpile": "babel src -d lib",
     "prepublish": "npm run transpile",
     "test": "npm run transpile && tap test/*.js",
-    "coverage": "npm run transpile && istanbul cover --dir coverage/istanbul node_modules/argg test/*.js --report html"
+    "coverage": "npm run transpile && istanbul cover --dir coverage/istanbul node_modules/argg test/*.js --report html",
+    "istanbul": "npm run transpile && istanbul cover --dir coverage/istanbul node_modules/argg test/*.js --report lcovonly",
+    "coveralls": "cat ./coverage/istanbul/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "standard": {
     "ignore": [
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "argg": "0.0.1",
+    "coveralls": "^2.11.2",
     "flac-metadata": "^0.1.1",
     "istanbul": "^0.3.7",
     "nixt": "^0.4.1",
