--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "yauzl": "^2.2.1"
   },
   "devDependencies": {
+    "JSONStream": "^0.10.0",
     "argg": "0.0.1",
+    "concat-stream": "^1.4.7",
     "coveralls": "^2.11.2",
     "flac-metadata": "^0.1.1",
     "istanbul": "^0.3.7",
