--- a/package.json
+++ b/package.json
@@ -36,34 +36,34 @@
   },
   "homepage": "https://github.com/othiym23/packard",
   "dependencies": {
-    "babel": "^4.7.12",
-    "bluebird": "^2.9.14",
-    "es6-shim": "^0.27.1",
+    "babel": "^5.6.23",
+    "bluebird": "^2.9.34",
+    "es6-shim": "^0.32.2",
     "flac-parser": "^0.3.1",
-    "glob": "^5.0.3",
-    "ini": "^1.3.3",
-    "mkdirp": "^0.5.0",
-    "moment": "^2.9.0",
-    "mv": "^2.0.3",
-    "npmlog": "^1.2.0",
-    "rc": "^0.6.0",
-    "rimraf": "^2.3.2",
+    "glob": "^5.0.14",
+    "ini": "^1.3.4",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.10.3",
+    "mv": "^2.1.1",
+    "npmlog": "^1.2.1",
+    "rc": "^1.0.3",
+    "rimraf": "^2.4.2",
     "sprintf": "^0.1.5",
-    "untildify": "^2.0.0",
-    "yargs": "^3.5.4",
-    "yauzl": "^2.2.1"
+    "untildify": "^2.1.0",
+    "yargs": "^3.15.0",
+    "yauzl": "^2.3.1"
   },
   "devDependencies": {
-    "JSONStream": "^0.10.0",
+    "JSONStream": "^1.0.4",
     "argg": "0.0.1",
-    "concat-stream": "^1.4.7",
-    "coveralls": "^2.11.2",
+    "concat-stream": "^1.5.0",
+    "coveralls": "^2.11.3",
     "flac-metadata": "^0.1.1",
-    "istanbul": "^0.3.7",
+    "istanbul": "^0.3.17",
     "nixt": "^0.4.1",
-    "standard": "^3.0.0-beta3",
-    "tap": "^0.7.1",
-    "yazl": "^2.1.2"
+    "standard": "^4.5.4",
+    "tap": "^1.3.1",
+    "yazl": "^2.2.2"
   },
   "license": "MIT"
 }
