--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "es6-shim": "^0.32.2",
     "flac-parser": "^0.3.1",
     "glob": "^5.0.14",
+    "graceful-fs": "^4.1.2",
     "ini": "^1.3.4",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.3",
