--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
+  - "0.10"
   - "0.12"
   - "iojs"
 sudo: false
 script: npm run-script coveralls
+before_install:
+  - npm install -g npm@latest
