--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   "scripts": {
     "transpile": "babel src -d lib",
     "prepublish": "npm run transpile",
-    "test": "npm run transpile && tap test/*.js",
-    "coverage": "npm run transpile && istanbul cover --dir coverage/istanbul node_modules/argg test/*.js --report html",
-    "istanbul": "npm run transpile && istanbul cover --dir coverage/istanbul node_modules/argg test/*.js --report lcovonly",
-    "coveralls": "npm run istanbul && cat ./coverage/istanbul/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "test": "standard && npm run transpile && tap test/*.js",
+    "coverage": "standard && npm run transpile && tap test/*.js --coverage",
     "standard": "standard"
   },
   "standard": {
@@ -36,34 +34,31 @@
   },
   "homepage": "https://github.com/othiym23/packard",
   "dependencies": {
-    "babel": "^5.6.23",
+    "babel": "^5.8.21",
     "bluebird": "^2.9.34",
-    "es6-shim": "^0.32.2",
+    "es6-shim": "^0.33.1",
     "flac-parser": "^0.3.1",
     "glob": "^5.0.14",
     "graceful-fs": "^4.1.2",
     "ini": "^1.3.4",
     "mkdirp": "^0.5.1",
-    "moment": "^2.10.3",
+    "moment": "^2.10.6",
     "mv": "^2.1.1",
     "npmlog": "^1.2.1",
-    "rc": "^1.0.3",
+    "rc": "^1.1.0",
     "rimraf": "^2.4.2",
     "sprintf": "^0.1.5",
     "untildify": "^2.1.0",
-    "yargs": "^3.15.0",
+    "yargs": "^3.21.0",
     "yauzl": "^2.3.1"
   },
   "devDependencies": {
     "JSONStream": "^1.0.4",
-    "argg": "0.0.1",
     "concat-stream": "^1.5.0",
-    "coveralls": "^2.11.3",
     "flac-metadata": "^0.1.1",
-    "istanbul": "^0.3.17",
     "nixt": "^0.4.1",
-    "standard": "^4.5.4",
-    "tap": "^1.3.1",
+    "standard": "^5.1.0",
+    "tap": "^1.3.2",
     "yazl": "^2.2.2"
   },
   "license": "MIT"
