--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/othiym23/packard",
   "dependencies": {
+    "@packard/model": "^2.0.1",
     "babel": "^5.8.21",
     "bluebird": "^2.9.34",
     "flac-parser": "^0.3.1",
