--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
   },
   "homepage": "https://github.com/othiym23/packard",
   "dependencies": {
-    "@packard/model": "^2.0.1",
-    "babel": "^5.8.21",
-    "bluebird": "^2.10.0",
+    "@packard/model": "^2.0.2",
+    "babel-polyfill": "^6.1.19",
+    "bluebird": "^3.0.5",
     "flac-parser": "^0.3.1",
-    "glob": "^5.0.14",
+    "glob": "^6.0.1",
     "graceful-fs": "^4.1.2",
     "ini": "^1.3.4",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.6",
     "mv": "^2.1.1",
-    "npmlog": "^1.2.1",
+    "npmlog": "^2.0.0",
     "rc": "^1.1.0",
     "rimraf": "^2.4.2",
     "sprintf": "^0.1.5",
@@ -53,10 +53,12 @@
     "yauzl": "^2.3.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.1.18",
+    "babel-preset-es2015": "^6.1.18",
     "flac-metadata": "^0.1.1",
     "nixt": "^0.4.1",
     "standard": "^5.3.1",
-    "tap": "^1.4.1",
+    "tap": "^2.2.1",
     "yazl": "^2.2.2"
   },
   "license": "MIT"
