--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/othiym23/packard",
   "dependencies": {
     "@packard/model": "^2.0.2",
+    "aproba": "^1.0.1",
     "babel-polyfill": "^6.1.19",
     "bluebird": "^3.0.5",
     "flac-parser": "^0.3.1",
@@ -56,6 +57,7 @@
     "babel-cli": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "flac-metadata": "^0.1.1",
+    "lodash": "^3.10.1",
     "nixt": "^0.4.1",
     "standard": "^5.4.1",
     "tap": "^2.3.1",
