--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "glob": "^6.0.1",
     "graceful-fs": "^4.1.2",
     "ini": "^1.3.4",
+    "knapsack-js": "^1.0.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.6",
     "mv": "^2.1.1",
