--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "aproba": "^1.0.1",
     "babel-polyfill": "^6.3.14",
     "bluebird": "^3.0.6",
+    "buffertools": "^2.1.3",
     "flac-parser": "^0.3.1",
     "glob": "^6.0.1",
     "graceful-fs": "^4.1.2",
