--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ sudo: false
 script: npm run-script coverage
 before_install:
   - npm install -g npm@latest
+compiler:
+  - gcc
+  - clang
+install:
+- if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
+    - clang
