--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,17 @@ node_js:
   - "4"
   - "5"
 sudo: false
-script: npm run-script coverage
-before_install:
-  - npm install -g npm@latest
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-compiler:
-  - gcc
-  - clang
+compiler: clang-3.6
+env:
+  - CXX=clang-3.6
 addons:
   apt:
     sources:
-    - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.6
+      - ubuntu-toolchain-r-test
     packages:
-    - gcc-4.8
-    - g++-4.8
-    - clang
+      - clang-3.6
+      - g++-4.8
+before_install:
+  - npm install -g npm@latest
+script: npm run-script coverage
