metadata: add ID3v2 writing for tests
The current approach uses eyeD3 for tag writing for the simple reason
that none of the JavaScript ID3v2 libraries with editing capabilities
were up to the job, and I don't have the spare couple of months to port
my own mp3info library from Ruby.

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "nixt": "^0.4.1",
     "standard": "^5.4.1",
     "tap": "^2.3.1",
+    "which": "^1.2.0",
     "yazl": "^2.2.2"
   },
   "license": "MIT"
