--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+      - atomicparsley
+      - eyed3
 before_install:
   - npm install -g npm@latest
 script: npm run-script coverage
