test: opt out of containerization for now
Need sudo to install AtomicParsley and eyeD3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ node_js:
   - "iojs"
   - "4"
   - "5"
-sudo: false
+# SIGH need sudo for APT installs, for now
+sudo: true
 compiler: clang-3.6
 env:
   - CXX=g++-4.8
@@ -15,8 +16,8 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
-      - atomicparsley
-      - eyed3
 before_install:
+  - sudo apt-get install atomicparsley
+  - sudo apt-get install eyed3
   - npm install -g npm@latest
 script: npm run-script coverage
