--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "babel-polyfill": "^6.9.0",
     "bluebird": "^3.4.0",
     "buffertools": "^2.1.4",
-    "flac-parser": "^0.3.1",
+    "flac-parser": "othiym23/flac-info-parser#master",
     "glob": "^7.0.3",
     "graceful-fs": "^4.1.4",
     "ini": "^1.3.4",
