--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graceful-fs": "^4.1.10",
     "ini": "^1.3.4",
     "knapsack-js": "^1.0.1",
+    "mississippi": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.15.2",
     "mp4-parser": "^0.3.0",
@@ -61,7 +62,6 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
-    "flac-metadata": "^0.1.1",
     "lodash": "^4.16.6",
     "nixt": "^0.5.0",
     "standard": "^8.5.0",
