ci: ensure metaflac and mp3val are available

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ addons:
     - g++-4.8
     - atomicparsley
     - eyed3
+    - flac
+    - mp3val
 before_install:
 - eyeD3 --version
 - npm install -g npm@latest
