ci: add lame, and try to get a newer eyeD3

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,11 @@ addons:
     packages:
     - g++-4.8
     - atomicparsley
-    - eyed3
     - flac
+    - lame
     - mp3val
 before_install:
+- pip install eyeD3
 - eyeD3 --version
 - npm install -g npm@latest
 script: npm run-script coverage
