ci: do a user install of eyeD3

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
     - lame
     - mp3val
 before_install:
-- pip install eyeD3
+- pip install --user eyeD3
 - eyeD3 --version
 - npm install -g npm@latest
 script: npm run-script coverage
